metadata1/unpackaged/objects/Project_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Dependant_On_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependant On Line Item</label>
        <referenceTo>Project_Line_Item__c</referenceTo>
        <relationshipLabel>Project Line Item</relationshipLabel>
        <relationshipName>Project_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Line Item</relationshipLabel>
        <relationshipName>Project_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project Line Item</label>
    <nameField>
        <label>Project Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>